# chat

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.h
client/: CMakeLists.txt  main.cpp
client/server/: server.cpp  server.h
client/server_connection/: multiple_responses_types.cpp  multiple_responses_types.h  server_connection.cpp  server_connection.h
client/widgets/: informative_dialog.cpp  informative_dialog.h  message_box.cpp  message_box.h  message_widget.cpp  message_widget.h  messages_box.cpp  messages_box.h
client/windows/: account_recovery_window.cpp  account_recovery_window.h  chat_window.cpp  chat_window.h  log_in_window.cpp  log_in_window.h  sign_in_window.cpp  sign_in_window.h  sign_up_window.cpp  sign_up_window.h  start_window.cpp  start_window.h
common_headers/: message.h  request_types.h  requests_types.h  responses_codes.h
server/: CMakeLists.txt  database.sql  database_manager.cpp  database_manager.h  main.cpp  packet.cpp  packet.h  packets_manager.cpp  packets_manager.h  server.cpp  server.h  session.cpp  session.h
server/src/: CMakeCache.txt  cmake_install.cmake  database_manager.cpp  database_manager.h  main.cpp  packet.cpp  packet.h  packets_manager.cpp  packets_manager.h  server.cpp  server.h  session.cpp  session.h
